# ska-sdp-wflow-low-selfcal

./: .gitlab-ci.yml  .pylintrc  CODEOWNERS  MANIFEST.skao.int  Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile
docs/src/: conf.py
docs/src/package/: guide.rst
src/ska/pipeline/: __init__.py  main.py
src/ska_sdp_wflow_low_selfcal/pipeline/: dp3_helper.py  main.py  operations.py  support_functions.py  wsclean_helper.py
src/ska_sdp_wflow_low_selfcal/pipeline/support/: H5parm_collector.py  blank_image.py  cluster.py  combine_h5parms.py  filter_skymodel.py  miscellaneous.py  observation.py
tests/: conftest.py  test_dp3.py  test_example.py  test_steps.py  test_support_functions.py  test_wsclean.py
tests/test_data/: facets.reg  fast_phase_0.h5parm  grouped.skymodel
